@@ -15,11 +15,16 @@
 
 
 static int
-print_out_key (void *cls, enum MHD_ValueKind kind, const char *key,
-               const char *value)
+print_out_key (void *cls,
+	       enum MHD_ValueKind kind,
+	       const char *key,
+               const char *value,
+	       size_t value_size)
 {
-  (void)cls;    /* Unused. Silent compiler warning. */
-  (void)kind;   /* Unused. Silent compiler warning. */
+  (void) cls;    /* Unused. Silent compiler warning. */
+  (void) kind;   /* Unused. Silent compiler warning. */
+  (void) value_size;
+  
   printf ("%s: %s\n", key, value);
   return MHD_YES;
 }
@@ -38,7 +43,9 @@ answer_to_connection (void *cls, struct MHD_Connection *connection,
   (void)con_cls;           /* Unused. Silent compiler warning. */
   printf ("New %s request for %s using version %s\n", method, url, version);
 
-  MHD_get_connection_values (connection, MHD_HEADER_KIND, print_out_key,
+  MHD_get_connection_values (connection,
+			     MHD_HEADER_KIND,
+			     &print_out_key,
                              NULL);
 
   return MHD_NO;
