@@ -65,8 +65,13 @@ copyBuffer (void *ptr, size_t size, size_t nmemb, void *ctx)
   return size * nmemb;
 }
 
+
 static int
-kv_cb (void *cls, enum MHD_ValueKind kind, const char *key, const char *value)
+kv_cb (void *cls,
+       enum MHD_ValueKind kind,
+       const char *key,
+       const char *value,
+       size_t value_size)
 {
   if ((0 == strcmp (key, MHD_HTTP_HEADER_HOST)) &&
       (0 == strncmp (value, "127.0.0.1", strlen("127.0.0.1"))) && (kind == MHD_HEADER_KIND))
@@ -76,6 +81,7 @@ kv_cb (void *cls, enum MHD_ValueKind kind, const char *key, const char *value)
     }
   return MHD_YES;
 }
+
 
 static int
 ahc_echo (void *cls,
